--- a/networks.css
+++ b/networks.css
@@ -12,47 +12,134 @@
 }
 
 .ui-search-big {
-    height: 40px;
+    height: 36px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    border-radius: 8px;
-    background: gray;
+    background: #E9E9E9;
+    border-radius: 10px;
     margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: -0.16px;
+    color: #777777;
+}
+
+.ui-search-big img {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .table-div {
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: visible;
     padding: 10px 16px 10px 16px;
+    white-space: nowrap;
+}
+
+.ui-network-labels {
+    display: flex;
+    justify-content: flex-start;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 30px;
+    /* identical to box height, or 231% */
+    letter-spacing: 0.12px;
+    color: #5F72FF;
+    width: 1100px;
 }
 
 .table-div table {
-    width: max-content;
+    width: 1600px;
 }
 
 .table-div th {
     text-align: left;
-    color: #8b8b8b;
-    font-size: 11px;
+    color: #777777;
+    font-size: 10px;
+    font-weight: 600;
     margin-bottom: 5px;
     margin-top: 10px;
     display: block;
 }
 
-.ui-label-row {
-    color: #6779ff;
-    font-weight: 600;
-    font-size: 14px;
+
+/**/
+
+.table-div td:first-of-type {
+    position: absolute;
+    width: 240px;
+    left: 229px;
+    top: auto;
+    margin-top: -6px;
+    background: white;
+    height: 63px;
+    padding-left: 16px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: 1px solid #f0f0f0;
+    border-right: 0;
+    display: flex;
+}
+
+.table-div {
+    margin-left: 240px;
+}
+
+
+/**/
+
+.table-div td {
+    white-space: nowrap;
+}
+
+.table-div table {
+    border-collapse: separate;
+}
+
+.ui-multi-row tr {
+    border-radius: 0;
+    border-top: 0;
+}
+
+.ui-traffic-inactive td:nth-of-type(3) {
+    opacity: 0.2;
+}
+
+.ui-multi-row tr:nth-of-type(2) {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top: 1px solid #f0f0f0;
+}
+
+.ui-multi-row tr:last-of-type {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.table-div .ui-multi-row td {
+    border-radius: 0;
+}
+
+.table-div .ui-multi-row tr:nth-of-type(2) td:first-of-type {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.table-div .ui-multi-row tr:last-of-type td:first-of-type {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .ui-content-row {
-    margin-left: 10px;
-    margin-right: 10px;
     padding: 5px 16px 5px 16px;
     background: #fff;
     border: 1px solid #f0f0f0;
     border-radius: 10px;
     display: block;
+    width: auto;
+    height: 55px;
 }
 
 .ui-active-field {
@@ -105,6 +192,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.ui-traffic-speed {
+    display: flex;
+    flex-direction: column;
 }
 
 
