--- a/css/networks.css
+++ b/css/networks.css
@@ -37,38 +37,12 @@
     white-space: nowrap;
 }
 
-.ui-network-labels {
-    display: flex;
-    justify-content: flex-start;
-    font-style: normal;
+.ui-network-labels p {
     font-weight: 600;
     font-size: 13px;
-    line-height: 30px;
     letter-spacing: 0.12px;
     color: #5F72FF;
-    width: 1100px;
 }
-
-.ui-network-labels-one {
-    width: 265px;
-}
-
-.ui-network-labels-two {
-    width: 109px;
-}
-
-.ui-network-labels-three {
-    width: 224px;
-}
-
-.ui-network-labels-four {
-    width: 128px;
-}
-
-
-/* .table-div table {
-    width: 1600px;
-} */
 
 .ui-table-label {
     text-align: left;
@@ -80,87 +54,76 @@
     display: block;
 }
 
-
-/**/
-
-
-/* .table-div td:first-of-type {
-    position: absolute;
-    width: 240px;
-    left: 229px;
-    top: auto;
-    margin-top: -6px;
-    background: white;
-    height: 63px;
-    padding-left: 16px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    border: 1px solid #f0f0f0;
-    border-right: 0;
-    display: flex;
+.table-div table {
+    border-spacing: 0;
 }
-
-.table-div {
-    margin-left: 240px;
-} */
-
-
-/**/
 
 .table-div td {
     white-space: nowrap;
-    padding-right: 10px;
-}
-
-.table-div table {
-    border-collapse: separate;
-}
-
-.ui-multi-row tr {
-    border-radius: 0;
-    border-top: 0;
-}
-
-.ui-traffic-inactive td:nth-of-type(3) {
-    opacity: 0.2;
-}
-
-.ui-multi-row tr:nth-of-type(2) {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-top: 1px solid #f0f0f0;
-}
-
-.ui-multi-row tr:last-of-type {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-
-/* .table-div .ui-multi-row td {
-    border-radius: 0;
-}
-
-.table-div .ui-multi-row tr:nth-of-type(2) td:first-of-type {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.table-div .ui-multi-row tr:last-of-type td:first-of-type {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-} */
-
-.ui-content-row {
-    padding: 5px 16px 5px 16px;
+    padding: 13px 16px 13px 0;
     background: #fff;
-    border: 1px solid #f0f0f0;
-    border-radius: 10px;
-    display: block;
-    width: auto;
-    height: 55px;
-    display: flex;
-    align-items: center;
+}
+
+.table-div table td:first-of-type {
+    padding-left: 16px;
+}
+
+.table-div th {
+    text-align: left;
+}
+
+.ui-content-row td {
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.ui-content-row td:first-of-type {
+    border-left: 1px solid #f0f0f0;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.ui-content-row td:last-of-type {
+    border-right: 1px solid #f0f0f0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.ui-multi-row .ui-content-row td {
+    border-radius: 0;
+}
+
+.ui-multi-row .ui-content-row td {
+    border-bottom: 0;
+}
+
+.ui-multi-row tr:nth-of-type(3) td:first-of-type {
+    border-top-left-radius: 10px;
+}
+
+.ui-multi-row tr:nth-of-type(3) td:last-of-type {
+    border-top-right-radius: 10px;
+}
+
+.ui-multi-row tr:last-of-type td {
+    border-bottom: 1px solid #f0f0f0;
+}
+
+.ui-multi-row tr:last-of-type td:first-of-type {
+    border-bottom-left-radius: 10px;
+}
+
+.ui-multi-row tr:last-of-type td:last-of-type {
+    border-bottom-right-radius: 10px;
+}
+
+.table-div tr:nth-of-type(2) td {
+    background: inherit;
+    padding: 10px 0 5px 0;
+}
+
+.ui-inactive {
+    opacity: 0.2;
 }
 
 .ui-network-status-container {
@@ -168,17 +131,44 @@
     align-items: center;
 }
 
-.ui-network-image-container {
-    background: green;
+.ui-network-checkbox {
+    width: 24px;
+    height: 24px;
+    border: 2px solid #5F72FF;
     border-radius: 50%;
-    border: 1px solid #d0cdcd;
-    margin-bottom: 5px;
-    margin-right: 3px
+    margin-right: 16px;
+    display: none;
+}
+
+.ui-display-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ui-icon-checked {
+    background: #5F72FF;
+}
+
+.ui-check-icon {
+    width: 15px;
+    height: 15px;
+}
+
+.ui-network-image-container {
+    border-radius: 50%;
+    border: 2px solid #d0cdcd;
+    margin-right: 3px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .ui-network-image {
-    width: 24px;
-    height: 24px;
+    width: 19px;
+    height: 19px;
 }
 
 .ui-network-label-container {
@@ -251,33 +241,7 @@
     flex-direction: column;
 }
 
-
-/* width */
-
-::-webkit-scrollbar {
-    width: 10px;
-    display: block;
-}
-
-
-/* Track */
-
- ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-
-/* Handle */
-
- ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-left: 20px solid white;
-    border-right: 20px solid white;
-}
-
-
-/* Handle on hover */
-
- ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+.ui-flex-center {
+    display: flex;
+    align-items: center;
 }
