--- a/src/index.css
+++ b/src/index.css
@@ -145,165 +145,7 @@ h2, h3, h1, p {
 
 /**/
 
-.ui-progress-box {
-  padding: 16px 35px 16px 35px;
-  display: flex;
-  justify-content: space-between;
-}
 
-.ui-utilization {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-}
-
-.ui-utilization-labels {
-  font-weight: 600;
-  font-size: 10px;
-  color: #888888;
-  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.7);
-  margin-bottom: 5px;
-}
-
-.ui-utilization div:first-of-type {
-  display: flex;
-  justify-content: space-between;
-}
-
-.ui-speed {
-  display: flex;
-  width: 50%;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.ui-speed-inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 220px;
-  margin: 4px;
-}
-
-.ui-speed-inner img {
-  width: 10px;
-  height: 10px;
-}
-
-.ui-speed-label-green {
-  font-weight: 600;
-  font-size: 10px;
-  color: #56B274;
-  margin-left: 2px;
-}
-
-.ui-speed-label-blue {
-  font-weight: 600;
-  font-size: 10px;
-  color: #5F72FF;
-  margin-left: 2px;
-}
-
-.ui-meter {
-  height: 16px;
-  position: relative;
-  background: #fff;
-  -moz-border-radius: 100px;
-  -webkit-border-radius: 100px;
-  border-radius: 100px;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  box-sizing: border-box;
-}
-
-.ui-progress-gradient {
-  height: 12px;
-  position: relative;
-  -moz-border-radius: 25px;
-  -webkit-border-radius: 25px;
-  border-radius: 25px;
-  margin-left: 10px;
-}
-
-.ui-progress-bar-big {
-  display: flex;
-  align-items: center;
-}
-
-.ui-progress-bar-small {
-  display: flex;
-  overflow: hidden;
-  border: 1px solid #e8e4e4;
-  width: 140px;
-}
-
-.ui-progress-bar-big span {
-  width: 55%;
-  text-align: right;
-}
-
-.ui-progress-bar-big p {
-  margin-right: 10px;
-  font-weight: 600;
-  font-size: 10px;
-  color: #fff;
-  font-style: normal;
-  letter-spacing: 0.12px;
-}
-
-.ui-progress-bar-big div {
-  height: 21px;
-  width: 2px;
-  background: #808080;
-}
-
-.ui-meter>span {
-  display: block;
-  height: 100%;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  background-color: #979797;
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.ui-progress-number {
-  width: 80%;
-  background: transparent;
-  font-weight: 600;
-  font-size: 10px;
-  color: rgba(0, 0, 0, 0.6);
-  display: flex;
-}
-
-.ui-progress-number p:first-of-type {
-  position: relative;
-  left: 43px;
-}
-
-.ui-progress-number p:nth-of-type(2) {
-  position: relative;
-  left: 84px;
-}
-
-.ui-progress-number p:nth-of-type(3) {
-  position: relative;
-  left: 117px;
-}
-
-.ui-gradient-green {
-  background: linear-gradient(to right, #d4f7df 33%, #a8eebf 33% 66%, #6ee294 66%);
-}
-
-.ui-gradient-blue {
-  background: linear-gradient(to right, rgba(95, 114, 255, 0.3) 33%, rgba(95, 114, 255, 0.6) 33% 66%, rgba(95, 114, 255, 0.8) 66%);
-}
-
-.ui-progress-background {
-  background: white;
-  width: 30%;
-}
 
 .ui-info-box {
   padding: 16px 20px 16px 20px;
@@ -465,11 +307,7 @@ h2, h3, h1, p {
   font-weight: 600;
 }
 
-/* @media only screen and (max-width: 1351px) {
-  .ui-icon-box p:first-of-type {
-      display: inline;
-      margin-right: 8px;
-  }
+@media only screen and (max-width: 1351px) {
   .ui-center-content {
       height: unset;
   }
@@ -500,7 +338,7 @@ h2, h3, h1, p {
   #support-info {
       order: 8;
   }
-} */
+}
 
 .table-div {
   overflow-x: auto;
