--- a/src/components/networksTable/style.css
+++ b/src/components/networksTable/style.css
@@ -1,28 +1,81 @@
 /* total width */
+
 .table-div::-webkit-scrollbar {
-  background-color:#fff;
-  width:16px
+  background-color: #fff;
+  width: 16px
 }
 
 /* background of the scrollbar except button or resizer */
+
 .table-div::-webkit-scrollbar-track {
-  background-color:#fff
+  background-color: #fff
 }
 
 /* scrollbar itself */
+
 .table-div::-webkit-scrollbar-thumb {
-  background-color:#babac0;
-  border-radius:16px;
-  border:4px solid #fff
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid #fff
 }
 
 /* set button(top and bottom of the scrollbar) */
-.table-div::-webkit-scrollbar-button {display:none}
+
+.table-div::-webkit-scrollbar-button {
+  display: none
+}
 
 .table-div table th:first-of-type {
   position: sticky;
   z-index: 3;
   left: 0;
+}
+
+.ui-heading-sort-align th div {
+  display: flex;
+  align-items: center;
+}
+
+.ui-device-ip-text {
+  font-style: normal;
+font-weight: 500;
+font-size: 15px;
+letter-spacing: -0.16px;
+color: #777777;
+}
+
+.ui-map-pin {
+  width: 28px;
+  height: 40px;
+}
+
+.ui-status-text {
+  font-style: normal;
+font-weight: 500;
+font-size: 15px;
+letter-spacing: -0.16px;
+color: #777777;
+}
+
+th div.ascending::after {
+  content: '';
+  background: url(../../assets/images/switch-arrow.png);
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background-size: cover;
+  cursor: pointer;
+}
+
+th div.descending::after {
+  content: '';
+  background: url(../../assets/images/switch-arrow.png);
+  transform: rotate(180deg);
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  background-size: cover;
+  cursor: pointer;
 }
 
 .table-div table td:first-of-type {
@@ -49,6 +102,7 @@
   font-size: 13px;
   letter-spacing: 0.12px;
   color: #5F72FF;
+  cursor: pointer;
 }
 
 .ui-table-label {
@@ -175,18 +229,20 @@ table {
 
 .ui-network-image-container {
   border-radius: 50%;
-  border: 2px solid #d0cdcd;
+  border: 2px solid #888888;
   margin-right: 3px;
   width: 30px;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #979797;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .ui-network-image {
-  width: 19px;
-  height: 19px;
+  width: 14px;
+  height: 15px;
 }
 
 .ui-network-label-container {
