--- a/src/components/modalDropdownRow/style.css
+++ b/src/components/modalDropdownRow/style.css
@@ -1,16 +1,23 @@
 /* Dropdown */
 
-.dropdown-trigger-row:hover~.ui-modal-dropdown {
+.switch-appear  {
   visibility: visible;
   max-height: 300px;
-  transition: all 0.8s ease-in-out;
+  transition: all 0.7s ease-in-out;
+  overflow: hidden;
 }
 
-.ui-modal-dropdown {
+.switch-hide {
   visibility: hidden;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.6s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.switch-hide .ui-modal-row:first-of-type{
+  border-top-left-radius: 10px !important;
+  border-top-right-radius: 10px !important;
+  transition: border-radius 0.5s ease-in;
 }
 
 .dropdown-trigger-row {
@@ -26,7 +33,7 @@
   transition: border-radius 0.5s ease;
 }
 
-.dropdown-trigger-row:hover {
+.border-animate {
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
 }
