--- a/src/components/simpeMap/style.css
+++ b/src/components/simpeMap/style.css
@@ -1,16 +1,26 @@
-.ui-marker {
-  width: 50px;
-  height: 50px;
+.gm-style .gm-style-iw-c {
+  padding: 0 !important;
 }
 
-.ui-map-pin {
-  width: 30px;
-  height: 50px;
+.gm-style .gm-style-iw-d {
+  overflow: auto !important;
 }
 
-.damjan {
-  width: 100px;
-  height: 200px;
-  background: red;
-  display: none;
+.gm-ui-hover-effect {
+  background: none !important;
+  display: block;
+  border: 0px;
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  cursor: pointer;
+  user-select: none;
+  top: 19px !important;
+  right: 37px !important;
+  width: 43px !important;
+  height: 21px !important;
+}
+
+.gm-ui-hover-effect img {
+  display: none !important;
 }
