--- a/src/components/simpeMap/style.css
+++ b/src/components/simpeMap/style.css
@@ -1,26 +1,3 @@
-.gm-style .gm-style-iw-c {
-  padding: 0 !important;
-}
-
-.gm-style .gm-style-iw-d {
-  overflow: auto !important;
-}
-
-.gm-ui-hover-effect {
-  background: none !important;
-  display: block;
-  border: 0px;
-  margin: 0px;
-  padding: 0px;
+.info-window-container {
   position: absolute;
-  cursor: pointer;
-  user-select: none;
-  top: 19px !important;
-  right: 37px !important;
-  width: 43px !important;
-  height: 21px !important;
-}
-
-.gm-ui-hover-effect img {
-  display: none !important;
 }
