--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-@font-face {
+/* @font-face {
   font-family: "SF Text";
   src: url("https://sf.abarba.me/SF-UI-Text-Regular.otf");
-}
+} */
 
 body {
   margin: 0;
   letter-spacing: 0.15px;
   color: #555;
-  font-family: "SF Text";
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 h2, h3, h1, p {
@@ -23,10 +23,11 @@ h2, h3, h1, p {
 }
 
 .ui-sidebar {
-  min-width: 220px;
+  width: 220px;
   background: white;
   border-right: 1px solid #f0f0f0;
   min-height: 100vh;
+  position: fixed;
 }
 
 .ui-logo-box {
@@ -65,16 +66,13 @@ h2, h3, h1, p {
   height: 20px;
 }
 
-.ui-menu-spacing {
-  margin-bottom: 20px;
-}
-
 .ui-menu-label {
   border-bottom: 1px solid #f0f0f0;
   padding: 0 0 8px 16px;
   color: #6B6B6B;
   font-size: 10px;
   font-weight: 600;
+  margin-top: 20px;
 }
 
 .ui-vertical-menu img {
@@ -109,6 +107,7 @@ h2, h3, h1, p {
   width: 100%;
   overflow: hidden;
   min-height: 100vh;
+  margin-left: 220px;
 }
 
 .ui-top-header {
@@ -124,7 +123,7 @@ h2, h3, h1, p {
   padding: 0 8px 0 8px;
   display: flex;
   flex-flow: column wrap;
-  height: 830px;
+  height: 100%;
 }
 
 .ui-box {
