--- a/src/components/subscribersHealthBars/style.css
+++ b/src/components/subscribersHealthBars/style.css
@@ -44,6 +44,24 @@
   height: 22px;
 }
 
+.ui-bar-yellow {
+  width: 2px;
+  height: 16px;
+  background: yellow;
+  border: 1px solid yellow;
+  border-radius: 5px;
+  margin: 0 1.6px 0 1.6px;
+}
+
+.ui-bar-red {
+  width: 2px;
+  height: 16px;
+  background: red;
+  border: 1px solid red;
+  border-radius: 5px;
+  margin: 0 1.6px 0 1.6px;
+}
+
 .ui-bar-green {
   width: 2px;
   height: 16px;
