--- a/src/components/subscribersHealthBars/style.css
+++ b/src/components/subscribersHealthBars/style.css
@@ -44,6 +44,15 @@
   height: 22px;
 }
 
+.ui-bar-ack {
+  width: 2px;
+  height: 16px;
+  background: gray;
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin: 0 1.6px 0 1.6px;
+}
+
 .ui-bar-yellow {
   width: 2px;
   height: 16px;
@@ -53,10 +62,26 @@
   margin: 0 1.6px 0 1.6px;
 }
 
+.ui-bar-yellow-empty {
+  width: 2px;
+  height: 16px;
+  border: 1px solid yellow;
+  border-radius: 5px;
+  margin: 0 1.6px 0 1.6px;
+}
+
 .ui-bar-red {
   width: 2px;
   height: 16px;
   background: red;
+  border: 1px solid red;
+  border-radius: 5px;
+  margin: 0 1.6px 0 1.6px;
+}
+
+.ui-bar-red-empty {
+  width: 2px;
+  height: 16px;
   border: 1px solid red;
   border-radius: 5px;
   margin: 0 1.6px 0 1.6px;
