Create Utilization progress bar as a component that takes inputs and calculates the fill of progress bar, also dynamically adding month and limit

--- a/src/components/graphs/customTooltip/style.css
+++ b/src/components/graphs/customTooltip/style.css
@@ -4,6 +4,14 @@
 
 }
 
+.recharts-tooltip-wrapper-right {
+  left: -200px !important;
+}
+
+.recharts-tooltip-wrapper-right .ui-tooltip-line {
+  left: 189px
+}
+
 .custom-tooltip {
   background: black;
   width: 200px;
