--- a/src/components/graphs/bandwidthGraph/style.css
+++ b/src/components/graphs/bandwidthGraph/style.css
@@ -7,6 +7,10 @@
   stroke: #D9D9D9;
 }
 
+.hide-last-tick .recharts-xAxis .recharts-cartesian-axis-ticks .recharts-cartesian-axis-tick:last-of-type tspan {
+  display: none;
+}
+
 text {
   font-weight: 600;
   font-size: 10px;
@@ -37,20 +41,20 @@ text {
 
 .ui-graph-main-label {
   font-weight: 500;
-font-size: 15px;
-color: #444444;
+  font-size: 15px;
+  color: #444444;
 }
 
 .ui-graph-time-label {
   font-weight: 500;
-font-size: 15px;
-color: #5F72FF;
+  font-size: 15px;
+  color: #5F72FF;
 }
 
 .ui-graph-date-label {
   font-weight: 600;
-font-size: 10px;
-color: #777777;
-margin-bottom: 10px;
-margin-top: 15px;
+  font-size: 10px;
+  color: #777777;
+  margin-bottom: 10px;
+  margin-top: 15px;
 }
