--- a/src/containers/routerTraffic/style.css
+++ b/src/containers/routerTraffic/style.css
@@ -17,3 +17,9 @@
     display: none;
   }
 }
+
+.router-traffic-item-hover:hover {
+  background: #eee;
+  cursor: pointer;
+  transition: background 0.2s ease;
+}
