--- a/src/components/routerTraffic/routerTrafficHeader/style.css
+++ b/src/components/routerTraffic/routerTrafficHeader/style.css
@@ -5,14 +5,15 @@
   align-items: center;
   box-shadow: 0px 1px 0px #EEEEEE;
   height: 62px;
+  position: relative;
 }
 
 .ui-router-traffic-main-label {
   font-weight: 600;
   font-size: 17px;
-  text-align: center;
-  letter-spacing: -0.24px;
   color: #444444;
+  position: absolute;
+  left: calc(50% - 25px);
 }
 
 .ui-router-traffic-back-label {
